again corrected vertical spacing

--- a/src/UIDesigning.css
+++ b/src/UIDesigning.css
@@ -312,7 +312,7 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		padding-top: 142px;
+		padding-top: 110px;
 	}
 	.about-link-wrapper{
 		position: absolute;
